force-app/main/default/objects/CalendlyAction__c/fields/CustomQuestion1__c.field-meta.xml
<CustomField>
    <fullName>CustomQuestion1__c</fullName>
    <label>CustomQuestion1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>