force-app/main/default/objects/CalendlyAction__c/fields/CustomQuestion2__c.field-meta.xml
<CustomField>
    <fullName>CustomQuestion2__c</fullName>
    <label>CustomQuestion2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>