force-app/main/default/objects/CalendlyAction__c/fields/CustomQuestion3__c.field-meta.xml
<CustomField>
    <fullName>CustomQuestion3__c</fullName>
    <label>CustomQuestion3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>