force-app/main/default/objects/CalendlyAction__c/fields/CustomResponse1__c.field-meta.xml
<CustomField>
    <fullName>CustomResponse1__c</fullName>
    <label>CustomResponse1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>