force-app/main/default/objects/CalendlyAction__c/fields/EventCancelerName__c.field-meta.xml
<CustomField>
    <fullName>EventCancelerName__c</fullName>
    <label>Event Canceler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>