force-app/main/default/objects/CalendlyAction__c/fields/EventCancelReason__c.field-meta.xml
<CustomField>
    <fullName>EventCancelReason__c</fullName>
    <label>Event Cancel Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>