force-app/main/default/objects/CalendlyAction__c/fields/EventDescription__c.field-meta.xml
<CustomField>
    <fullName>EventDescription__c</fullName>
    <label>Event Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>