force-app/main/default/objects/CalendlyAction__c/fields/EventPrimaryPublisherEmail__c.field-meta.xml
<CustomField>
    <fullName>EventPrimaryPublisherEmail__c</fullName>
    <label>Event Primary Publisher Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>