force-app/main/default/objects/CalendlyAction__c/fields/EventPrimaryPublisherName__c.field-meta.xml
<CustomField>
    <fullName>EventPrimaryPublisherName__c</fullName>
    <label>Event Primary Publisher Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>