force-app/main/default/objects/CalendlyAction__c/fields/EventStartTime__c.field-meta.xml
<CustomField>
    <fullName>EventStartTime__c</fullName>
    <label>Event Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>