force-app/main/default/objects/CalendlyAction__c/fields/EventSubject__c.field-meta.xml
<CustomField>
    <fullName>EventSubject__c</fullName>
    <label>Event Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>