force-app/main/default/objects/CalendlyAction__c/fields/EventTypeDuration__c.field-meta.xml
<CustomField>
    <fullName>EventTypeDuration__c</fullName>
    <label>Event Type Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>