force-app/main/default/objects/CalendlyAction__c/fields/EventTypeKind__c.field-meta.xml
<CustomField>
    <fullName>EventTypeKind__c</fullName>
    <label>Event Type Kind</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>