force-app/main/default/objects/CalendlyAction__c/fields/EventTypeName__c.field-meta.xml
<CustomField>
    <fullName>EventTypeName__c</fullName>
    <label>Event Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>