force-app/main/default/objects/CalendlyAction__c/fields/EventTypeSlug__c.field-meta.xml
<CustomField>
    <fullName>EventTypeSlug__c</fullName>
    <label>Event Type Slug</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>