force-app/main/default/objects/CalendlyAction__c/fields/EventUuid__c.field-meta.xml
<CustomField>
    <fullName>EventUuid__c</fullName>
    <label>Event Uuid</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>