force-app/main/default/objects/CalendlyAction__c/fields/InviteeCancelerName__c.field-meta.xml
<CustomField>
    <fullName>InviteeCancelerName__c</fullName>
    <label>Invitee Canceler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>