force-app/main/default/objects/CalendlyAction__c/fields/InviteeCancelReason__c.field-meta.xml
<CustomField>
    <fullName>InviteeCancelReason__c</fullName>
    <label>Invitee Cancel Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>