force-app/main/default/objects/CalendlyAction__c/fields/InviteeCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>InviteeCreatedAt__c</fullName>
    <label>Invitee Created At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>