force-app/main/default/objects/CalendlyAction__c/fields/InviteeEmail__c.field-meta.xml
<CustomField>
    <fullName>InviteeEmail__c</fullName>
    <label>Invitee Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>