force-app/main/default/objects/CalendlyAction__c/fields/InviteeFirstName__c.field-meta.xml
<CustomField>
    <fullName>InviteeFirstName__c</fullName>
    <label>Invitee First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>