force-app/main/default/objects/CalendlyAction__c/fields/InviteeLastName__c.field-meta.xml
<CustomField>
    <fullName>InviteeLastName__c</fullName>
    <label>Invitee Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>