force-app/main/default/objects/CalendlyAction__c/fields/InviteeName__c.field-meta.xml
<CustomField>
    <fullName>InviteeName__c</fullName>
    <label>Invitee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>