force-app/main/default/objects/CalendlyAction__c/fields/InviteeTimezone__c.field-meta.xml
<CustomField>
    <fullName>InviteeTimezone__c</fullName>
    <label>Invitee Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>