force-app/main/default/objects/CalendlyAction__c/fields/InviteeUuid__c.field-meta.xml
<CustomField>
    <fullName>InviteeUuid__c</fullName>
    <label>Invitee Uuid</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>