force-app/main/default/objects/CalendlyAction__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <label>Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>