force-app/main/default/objects/CalendlyAction__c/fields/UtmCampaign__c.field-meta.xml
<CustomField>
    <fullName>UtmCampaign__c</fullName>
    <label>UtmCampaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>