force-app/main/default/objects/CalendlyAction__c/fields/UtmContent__c.field-meta.xml
<CustomField>
    <fullName>UtmContent__c</fullName>
    <label>UtmContent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>