force-app/main/default/objects/CalendlyAction__c/fields/UtmMedium__c.field-meta.xml
<CustomField>
    <fullName>UtmMedium__c</fullName>
    <label>UtmMedium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>