force-app/main/default/objects/CalendlyAction__c/fields/UtmSource__c.field-meta.xml
<CustomField>
    <fullName>UtmSource__c</fullName>
    <label>UtmSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>