force-app/main/default/objects/CalendlyAction__c/fields/UtmTerm__c.field-meta.xml
<CustomField>
    <fullName>UtmTerm__c</fullName>
    <label>UtmTerm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>