force-app/main/default/objects/CalendlyAction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>InviteeName__c</columns>
    <columns>InviteeEmail__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ObjectId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>